# Acontext

./: README.md  ROADMAP.md  readme.md
.github/workflows/: cli-release.yaml
docs/: docs.json  llm_quick.mdx  quick.mdx
docs/api-reference/: introduction.mdx  openapi.json
docs/chore/: per-user.mdx
docs/learn/: search-skills.mdx  skill-space.mdx
docs/observe/: buffer.mdx
src/server/api/: api.py  pyproject.toml
src/server/api/acontext_server/: env.py
src/server/api/acontext_server/api/: api_v1_check.py  api_v1_router.py
src/server/api/acontext_server/client/: db.py
src/server/api/acontext_server/schema/message/: openai.py
src/server/api/acontext_server/schema/orm/: __init__.py  base.py  project.py  space.py
src/server/api/acontext_server/schema/pydantic/: promise.py
src/server/api/acontext_server/schema/pydantic/orm/: base.py
src/server/api/go/: go.mod  go.sum
src/server/api/go/docs/: docs.go  swagger.json  swagger.yaml
src/server/api/go/internal/infra/blob/: s3.go
src/server/api/go/internal/infra/httpclient/: core.go
src/server/api/go/internal/modules/handler/: artifact_test.go  session.go  session_test.go  space.go
src/server/api/go/internal/modules/model/: message.go  metric.go
src/server/api/go/internal/modules/repo/: task.go
src/server/api/go/internal/modules/service/: session.go
src/server/api/go/internal/pkg/converter/: openai.go
src/server/api/go/internal/pkg/normalizer/: openai.go
src/server/api/go/internal/pkg/utils/converter/: normalizer.go  normalizer_test.go
src/server/api/go/internal/router/: router.go
(+58 files in other folders)
